# discordrpc

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: cli.rs  execute.rs  main.rs
