[package]
name = "discordrpc"
description = "Fast Discord RPC Client written in Rust"
version = "0.2.3"
edition = "2021"

[profile.release]
lto = true
panic = 'abort'
strip = true
opt-level = 'z'
codegen-units = 1

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
clap_complete = "4.4.9"
clap_mangen = "0.2.18"
discord-rich-presence = "0.2.3"
